--- a/etc/emq_auth_mongo.conf
+++ b/etc/emq_auth_mongo.conf
@@ -48,7 +48,7 @@ auth.mongo.auth_query.collection = mqtt_user
 auth.mongo.auth_query.password_field = password
 
 ## Password hash: plain, md5, sha, sha256, bcrypt
-auth.mongo.auth_query.password_hash = sha256
+#auth.mongo.auth_query.password_hash = sha256
 
 ## sha256 with salt suffix
 ## auth.mongo.auth_query.password_hash = sha256,salt
@@ -61,7 +61,7 @@ auth.mongo.auth_query.password_hash = sha256
 
 ## pbkdf2 with macfun iterations dklen
 ## macfun: md4, md5, ripemd160, sha, sha224, sha256, sha384, sha512
-## auth.mongo.auth_query.password_hash = pbkdf2,sha256,1000,20
+auth.mongo.auth_query.password_hash = pbkdf2,sha256,1000,20
 
 auth.mongo.auth_query.selector = username=%u
 
